[package]
name = "twitch-client"
version = "0.1.0"
description = "Twitch REST API client"
license = "MIT/Apache-2.0"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
keywords = ["twitch"]

[dependencies]
# Http client for Twitch REST API
hyper = "0.7"
# Escaping of query parameters
url = "0.5"
# JSON serialization and deserialization
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
