[package]
name = "twitch-client"
version = "0.1.0"
description = "Twitch REST API client"
license = "MIT/Apache-2.0"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
keywords = ["twitch"]

[dependencies]
# Http client for Twitch REST API
hyper = "0.10"
hyper-native-tls = "0.2"
native-tls = "0.1"
# Escaping of query parameters
url = "1.4"
# JSON serialization and deserialization
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
